# quartz

./: .gitignore  APPLY_TO_REPO.md  BUNDLE_FILE_LIST.txt  Cargo.toml  Dockerfile.cuda  Dockerfile.rocm  LICENSE  README.md  audit.md  audit_codex_20260422.md  audit_codex_20260423.md  audit_codex_20260425.md  audit_codex_20260428.md  audit_external_review_response.md  audit_p01_telemetry.md  audit_p02_preflight.md  audit_p03_freshness.md  audit_p04_seed_enforcement.md  audit_p05_calibration.md  audit_p06_searchpolicy_scaffolding.md  audit_p07_legacy_policies.md  audit_p08_kl_lucb.md  audit_phase0_claim_freeze.md  audit_phase1_python_prototype.md  audit_phase2_cache_arch.md  audit_phase3_gumbel_sh.md  audit_phase4_kg_stop.md  audit_phase5_tactical_sentinel.md  audit_phase6_reservoir.md  audit_phase7_ments.md  audit_phase8_battle_and_summary.md  audit_phase8b_engine_integration.md  audit_phase8c_parallel_async_policy_halt.md  audit_stage7.md  docker-compose.yml  phase15_strategy_revision_v2.md  prior_revision_experiment_plan.md  pyproject.toml  quartz_idea_foundry_skeleton.patch  report.md  (+1 more)
docs/legacy/omoknuni-005-mcts-throughput-optimization/: CMakeLists.txt  COMPREHENSIVE_PROFILING_ANALYSIS_20251018.md  HOWTO-RUN-API-TESTS.md  HOWTO-RUN-ERROR-HANDLING-TESTS.md  HOWTO-RUN-OOM-RECOVERY-TESTS.md  HOWTO-RUN-OPERATIONS-TESTS.md  HOWTO-RUN-SANITIZER-TESTS.md  HOWTO-RUN-TESTS.md  LICENSE  MCTS_API_DOCUMENTATION.md  MCTS_PERFORMANCE_ANALYSIS_REPORT.md  OPTIMIZATION_QUICK_REFERENCE.md  PROFILING_ANALYSIS_SUMMARY.md  PROFILING_OVERHEAD_ANALYSIS_FINAL.md  PROFILING_QUICKSTART.md  PROFILING_TOOLS_GUIDE.md  README.md  REBUILD_AND_VERIFY_PROFILING.sh  mcts_guide.md  pyproject.toml  pytest.ini
docs/legacy/omoknuni-005-mcts-throughput-optimization/config/: default.yaml  development.yaml  gomoku_48h_training.yaml  optimized.yaml  production.yaml
docs/legacy/omoknuni-005-mcts-throughput-optimization/cpp_extensions/games/: CMakeLists.txt  GAMES_CLAUDE.md  game_export.h  interface.cpp  interface.h  python_bindings.cpp
docs/legacy/omoknuni-005-mcts-throughput-optimization/cpp_extensions/mcts/: CMakeLists.txt  CRITICAL_BUG_FIX.md  async_inference_queue.cpp  async_inference_queue.hpp  backup.cpp  backup.hpp  batch_inference_callback.hpp  batch_inference_coordinator.cpp  batch_inference_coordinator.hpp  bump_arena.hpp  continuous_simulation_runner.cpp  continuous_simulation_runner.hpp  dlpack_bridge.cpp  dlpack_bridge.hpp  dlpack_python.cpp  inference_callback.hpp  instrumentation.cpp  instrumentation.hpp  lock_free_queue.hpp  python_bindings.cpp  selection.cpp  selection.hpp  simulation_runner.cpp  simulation_runner.hpp  state_pool.cpp  state_pool.hpp  thread_affinity.cpp  thread_affinity.hpp  thread_local_arena.cpp  thread_local_arena.hpp  tiny_node.hpp  tiny_node_tree.cpp  tiny_node_tree.hpp  tree.cpp  tree.hpp  tree_adapter.cpp  tree_adapter.hpp  virtual_loss.cpp  virtual_loss.hpp
docs/legacy/omoknuni-005-mcts-throughput-optimization/cpp_extensions/utils/: CMakeLists.txt  export_macros.h  game_export.h  game_state_pool.h  hash_specializations.cpp  hash_specializations.h  igamestate.cpp  igamestate.h  illegal_move_exception.h  logger.cpp  logger.h  zobrist_hash.cpp  zobrist_hash.h
docs/legacy/omoknuni-005-mcts-throughput-optimization/docs/: CI_PIPELINE.md  alpha_beta_testing_guide.md  api.md  mcts_cpp_runner.md  operations.md  training_guide.md
docs/legacy/omoknuni-005-mcts-throughput-optimization/docs/api/: make_unmake_pattern.md  state_pooling.md
docs/legacy/omoknuni-005-mcts-throughput-optimization/docs/architecture/: zero_copy_mcts.md
docs/legacy/omoknuni-005-mcts-throughput-optimization/docs/operations/: rollback_procedure.md
docs/legacy/omoknuni-005-mcts-throughput-optimization/examples/: python_bindings_demo.py
docs/legacy/omoknuni-005-mcts-throughput-optimization/scripts/: analyze_cache_hit_rate.py  analyze_profiling_results.py  audit_state_cloning.sh  bench_autotune_coordinators.py  benchmark_all_sizes.py  benchmark_nn_architectures.py  benchmark_nn_inference.py  benchmark_nn_throughput.py  benchmark_parallel_modes.py  benchmark_phase1.py  benchmark_phase2.py  benchmark_throughput.py  build_with_sanitizers.py  calculate_model_params.py  check_memory_leaks.py  compare_benchmarks.py  compare_search_quality.py  configure_openmp.sh  create_test_model.py  debug_profiler_slowdown.py  diagnose_gpu_bottleneck.py  diagnose_thread_scaling.py  fixed_profiling_campaign.py  profiling_campaign.py  quick_gpu_benchmark.py  run_complete_profiling.sh  run_profiling_suite.sh  test_adaptive_api.py  test_adaptive_batching.py  test_baseline_config.py  test_cuda_graph_batch_sizes.py  test_cuda_graph_integration.py  test_cuda_graph_simple.py  test_dlpack_cuda_graphs.py  test_self_play_comprehensive.py  test_sync_vs_async.py  tune_async_batch_size.py  tune_async_threads.py  tune_async_timeout.py  tune_batch_size.py  (+20 more)
docs/legacy/omoknuni-005-mcts-throughput-optimization/scripts/profiling/: analyze_campaign.py
docs/legacy/omoknuni-005-mcts-throughput-optimization/specs/: __init__.py
docs/legacy/omoknuni-005-mcts-throughput-optimization/specs/001-goal-create-spec/: __init__.py  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
docs/legacy/omoknuni-005-mcts-throughput-optimization/specs/002-cpp-simulation-runner/: MIGRATION.md  PYTHON_FIXES_REQUIRED.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
docs/legacy/omoknuni-005-mcts-throughput-optimization/specs/003-async-inference-batching/: plan.md  spec.md  (+1 more)
docs/legacy/omoknuni-005-mcts-throughput-optimization/src/: __init__.py
docs/legacy/omoknuni-005-mcts-throughput-optimization/tests/: CMakeLists.txt  conftest.py
prototype/: README.md  pyproject.toml
prototype/bqpp_prototype/: __init__.py  belief.py  certificate.py  controller.py  gumbel_sh.py  kg.py  kl_lucb.py  prior_surprise.py  reservoir.py  synthetic.py  voi.py
prototype/tests/: test_belief.py  test_certificate.py  test_controller.py  test_gumbel_sh.py  test_kg.py  test_kl_lucb.py  test_prior_surprise.py  test_reservoir.py  test_voi.py
(+734 files in other folders)
