[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quartz-mcts"
version = "0.10.0"
description = "Calibrated metacontroller for neural MCTS (AlphaZero training framework)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "QUARTZ Team"}]
keywords = ["mcts", "alphazero", "reinforcement-learning", "game-ai", "onnx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

dependencies = [
    "numpy>=1.24",
    "tqdm",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# Core ML framework (pick one)
torch = ["torch>=2.0"]
jax = ["torch>=2.0", "jax[cpu]>=0.4", "flax>=0.7", "optax"]

# ONNX inference (deploy without torch/jax)
onnx = ["onnxruntime>=1.16", "onnx>=1.14"]
onnx-gpu = ["onnxruntime-gpu>=1.16", "onnx>=1.14"]
search = ["optuna>=3.6"]

# All-in-one
full = ["torch>=2.0", "onnxruntime>=1.16", "onnx>=1.14"]
dev = ["pytest", "ruff", "onnx>=1.14", "optuna>=3.6"]

[project.scripts]
quartz-train = "quartz.train:main"
quartz-eval = "quartz.evaluation:_run_all"
quartz-gpu = "quartz.gpu_detect:main"
quartz-play = "quartz.play_gui:main"

[tool.setuptools.packages.find]
include = ["quartz*"]

[tool.setuptools.package-data]
quartz = ["static/play/*"]

[tool.pytest.ini_options]
markers = [
    # P10 (audit_codex_20260425.md W10): slower integration-style tests
    # that build a real torch model + replay and run a few SGD iters.
    # Still fast enough for the default suite (~3s) but tagged so
    # opt-out CI gates can skip them via `-m "not slow"`.
    "slow: integration-style tests that build a real model + replay",
    # Q5 (audit_codex_20260428.md W'3): real-loop tests that spawn the
    # Rust self-play subprocess and exercise the full
    # selfplay→replay→SGD→eval pipeline. Minutes-scale; opt-in only.
    # Run via `pytest -m real_loop tests/`.
    "real_loop: full pipeline tests; spawns Rust binary; minutes-scale",
]
