[build-system]
requires = ["setuptools>=77,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quartz-mcts"
version = "0.10.0"
description = "Calibrated metacontroller for neural MCTS (AlphaZero training framework)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [{name = "QUARTZ Team"}]
keywords = ["mcts", "alphazero", "reinforcement-learning", "game-ai", "onnx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

dependencies = [
    "numpy>=2,<3",
    "tqdm",
    "matplotlib>=3.8",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "scipy>=1.14,<2",
    "psutil>=7,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-timeout>=2.4,<3",
    "ruff>=0.15,<0.16",
    "setuptools>=77,<82",
]
# ONNX inference (deploy without torch/jax)
onnx = ["onnxruntime>=1.16", "onnx>=1.14"]
onnx-gpu = ["onnxruntime-gpu>=1.16", "onnx>=1.14"]
search = ["optuna>=3.6"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[project.scripts]
quartz-train = "quartz.train:main"
quartz-eval = "quartz.evaluation:_run_all"
quartz-gpu = "quartz.gpu_detect:main"
quartz-play = "quartz.play_gui:main"

[tool.setuptools.packages.find]
include = ["quartz*"]

[tool.setuptools.package-data]
quartz = ["static/play/*"]

[tool.ruff]
target-version = "py312"
extend-exclude = ["docs/legacy"]

[tool.pytest.ini_options]
markers = [
    # P10 (audit_codex_20260425.md W10): slower integration-style tests
    # that build a real torch model + replay and run a few SGD iters.
    # Still fast enough for the default suite (~3s) but tagged so
    # opt-out CI gates can skip them via `-m "not slow"`.
    "slow: integration-style tests that build a real model + replay",
    # Q5 (audit_codex_20260428.md W'3): real-loop tests that spawn the
    # Rust self-play subprocess and exercise the full
    # selfplay→replay→SGD→eval pipeline. Minutes-scale; opt-in only.
    # Run via `pytest -m real_loop tests/`.
    "real_loop: full pipeline tests; spawns Rust binary; minutes-scale",
]

[dependency-groups]
analysis = [
    "onnx>=1.21,<2",
    "onnxruntime-gpu>=1.22,<2",
    "optuna>=4.8,<5",
]
dev = [
    "pip>=26,<27",
    "pytest>=9,<10",
    "pytest-timeout>=2.4,<3",
    "ruff>=0.15,<0.16",
    "setuptools>=77,<82",
]
