[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bqpp-prototype"
version = "0.1.0"
description = "BQ++ numerical primitive prototype (Python). Math validation before Rust port."
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["bqpp_prototype*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
