[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "pybind11",
    "numpy>=1.20.0",
    "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "omoknuni"
version = "0.1.0"
description = "High-Performance AlphaZero Engine for board games"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "cosmosapjw", email = "cosmosapjw@example.com"},
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.20.0",
    "pybind11>=2.10.0",
    "cython>=3.0.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.14.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "h5py>=3.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
gpu = [
    "nvidia-ml-py>=11.495.46",
    "cupy-cuda12x>=12.0.0",
]
viz = [
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

# CMake configuration
# Sanitizer options can be enabled via config-settings:
#   pip install -e . --config-settings=cmake.args="-DENABLE_ASAN=ON"
#   pip install -e . --config-settings=cmake.args="-DENABLE_TSAN=ON"
#   pip install -e . --config-settings=cmake.args="-DENABLE_UBSAN=ON"
cmake.verbose = false
cmake.build-type = "Release"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
    "contract: marks contract tests",
    "performance: marks performance benchmarks",
    "sanitizer: marks tests that require sanitizer builds",
    "asan: marks AddressSanitizer-specific tests",
    "tsan: marks ThreadSanitizer-specific tests",
    "ubsan: marks UndefinedBehaviorSanitizer-specific tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]